# term_paper

./: README.md  functions.py  main.py  pyproject.toml
srs/: functions.py  main.py  operations.py
tests/: test_functions.py
